Add wallpaper for home

--- a/dot_config/sway/config.tmpl
+++ b/dot_config/sway/config.tmpl
@@ -38,3 +38,8 @@ exec "[[ -z $SSH_AUTH_SOCK ]] && ssh-agent -a $SSH_AUTH_SOCK"
 exec sh -c "ssh-agent -s -a $SSH_AUTH_SOCK"
 
 include /etc/sway/config.d/50-systemd-user.conf
+
+{{ if eq .chezmoi.hostname "nibor" }}
+output DP-1 bg /home/robin/Pictures/wallpapers/DP-1.png tile '#000000'
+output DP-2 bg /home/robin/Pictures/wallpapers/DP-2.png tile '#000000'
+{{ end }}
