Background for work desktop

--- a/dot_config/sway/config.tmpl
+++ b/dot_config/sway/config.tmpl
@@ -1,6 +1,4 @@
-# i3 config file (v4)
-#
-# Please see https://i3wm.org/docs/userguide.html for a complete reference!
+# vim: ft=swayconfig
 
 set $mod Mod4
 
@@ -39,7 +37,11 @@ exec sh -c "ssh-agent -s -a $SSH_AUTH_SOCK"
 
 include /etc/sway/config.d/50-systemd-user.conf
 
-{{ if eq .chezmoi.hostname "nibor" }}
+{{ if eq .chezmoi.fqdnHostname "rgertenbach.mtv.corp.google.com" }}
+exec_always {{ .chezmoi.homeDir }}/bin/autoscreen
+output DP-2 bg {{ .chezmoi.homeDir }}/Pictures/DP-2.png tile '#000000'
+output DP-4 bg {{ .chezmoi.homeDir }}/Pictures/DP-4.png tile '#000000'
+{{ else if eq .chezmoi.hostname "nibor" }}
 output DP-1 bg /home/robin/Pictures/wallpapers/DP-1.png tile '#000000'
 output DP-2 bg /home/robin/Pictures/wallpapers/DP-2.png tile '#000000'
 {{ end }}
