--- a/dot_config/sway/config.tmpl
+++ b/dot_config/sway/config.tmpl
@@ -45,5 +45,5 @@ output DP-4 bg {{ .chezmoi.homeDir }}/Pictures/DP-4.png tile '#000000'
 output DP-1 bg /home/robin/Pictures/wallpapers/DP-1.png tile '#000000'
 output DP-2 bg /home/robin/Pictures/wallpapers/DP-2.png tile '#000000'
 {{ else if eq .chezmoi.hostname "rgertenbach3" }}
-output * bg {{ .chezmoi.homeDir }}/Pictures/pexels-francesco-ungaro-2915997.png tile '#000000'
+output * bg {{ .chezmoi.homeDir }}/Pictures/pexels-francesco-ungaro-2915997.png fill '#000000'
 {{ end }}
