--- a/dot_config/sway/config.tmpl
+++ b/dot_config/sway/config.tmpl
@@ -46,4 +46,6 @@ output DP-1 bg /home/robin/Pictures/wallpapers/DP-1.png tile '#000000'
 output DP-2 bg /home/robin/Pictures/wallpapers/DP-2.png tile '#000000'
 {{ else if eq .chezmoi.hostname "rgertenbach3" }}
 output * bg {{ .chezmoi.homeDir }}/Pictures/pexels-francesco-ungaro-2915997.png fill '#000000'
+{{ else if eq .chezmoi.hostname "corgi" }}
+output DSI-1 transform 90
 {{ end }}
