battery for corgi

--- a/dot_config/i3blocks/config.tmpl
+++ b/dot_config/i3blocks/config.tmpl
@@ -24,7 +24,7 @@ label=
 interval=1
 command=~/.config/i3blocks/scripts/ram
 
-{{ if eq .chezmoi.hostname "rgertenbach3" }}
+{{ if eq .chezmoi.hostname "rgertenbach3" "corgi" }}
 [battery]
 command=~/.config/i3blocks/scripts/battery
 markup=pango
