--- a/dot_config/sway/config.tmpl
+++ b/dot_config/sway/config.tmpl
@@ -31,13 +31,12 @@ input "1133:49740:Logitech_G400s_Optical_Gaming_Mouse" {
 # Notifications
 exec /usr/bin/dunst
 
-# Get a global SSH Auth sock to be able to SSH to cloudtop
-exec "[[ -z $SSH_AUTH_SOCK ]] && ssh-agent
+# Get a global SSH Auth sock to be able to SSH
+exec "[[ -z $SSH_AUTH_SOCK ]] && eval $(ssh-agent) -s"
 # I think this needs to go: I call it twice (unnecessary) and if I don't have
 # an address I cannot provide it otherwise I don't want to rerun this.
 # exec "[[ -z $SSH_AUTH_SOCK ]] && ssh-agent -a $SSH_AUTH_SOCK"
 # exec sh -c "ssh-agent -s -a $SSH_AUTH_SOCK"
-
 
 include /etc/sway/config.d/50-systemd-user.conf
 
