--- a/dot_bash_aliases.tmpl
+++ b/dot_bash_aliases.tmpl
@@ -31,7 +31,7 @@ else
   export pager='less'
 fi
 
-{{ if eq .chezmoi.hostname "nibor" }}
+{{ if eq .chezmoi.hostname "husky" }}
 launch-sway() {
     XDG_CURRENT_DESKTOP='sway' sway --unsupported-gpu
 }
